# kradio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.sh
.github/workflows/: ci.yml  code_quality.yml  release.yml
conf/: radio_sender.m3u
debian/: build_deb.sh  postinst  postrm  prerm
kradio/: display_manager.py  lc_display.py  lcd_shutdown.py  radio.py
packaging/: kradio-lcd-shutdown.service
prog/: LCDaus_text.py  display.py  display_manager.py  i2c_lib.py  lc_display.py  radio.py
sys_config/lib/systemd/system/: LCDaus_text.service  radio.service
test/: conftest.py  test_display_manager.py  test_radio.py
