[project]
name = "kradio"
version = "1.0.0"
description = "A simple kitchen webradio"
authors = [{ name = "micxer", email = "micxer@micxer.de" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "smbus2~=0.4.3",
    "rpi-gpio2 @ git+https://github.com/underground-software/RPi.GPIO2.git@v0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "mock>=5.1.0",
    "mypy>=1.11.0",
    "types-rpi-gpio>=0.7.0.20240314",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
