[project]
name = "kradio"
version = "1.0.0"
description = "A simple kitchen webradio"
authors = [{ name = "micxer", email = "micxer@micxer.de" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "smbus2~=0.4.3",
    "gpiod>=2.0.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mock>=5.1.0",
    "mypy>=1.11.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
