[project]
name = "kradio"
version = "1.0.0"
description = "A simple kitchen webradio"
authors = [{ name = "micxer", email = "micxer@micxer.de" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "smbus2~=0.6.1",
    "gpiod>=2.0.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mock>=5.1.0",
    "mypy>=1.11.0",
    "python-semantic-release>=9.0.0",
]

[tool.uv]
package = true

[project.scripts]
kradio = "kradio.radio:main"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
build_command = "uv build && bash debian/build_deb.sh"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^ci:",
    "^chore:",
    "^style:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
